--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -27,7 +27,7 @@
   " ===otpComment==== ": " ================ Otp_view ======= ",
 
   "enter_your_code": "Introduce tu código",
-  "we_sent_code_to": "Hemos enviado un código a +1 571-289-3329",
+  "we_sent_code_to": "Hemos enviado un código a ",
   "please_enter_to_verify": "Por favor, ingrésalo a continuación para verificar tu número",
   "enter_your_pin_code": "Ingresa tu código PIN",
   "verify_now": "Verificar ahora",
