--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -27,7 +27,7 @@
   " ===otpComment==== ": " ================ Otp_view ======= ",
 
   "enter_your_code": "Entrez votre code",
-  "we_sent_code_to": "Nous avons envoyé un code à +1 571-289-3329",
+  "we_sent_code_to": "Nous avons envoyé un code à",
   "please_enter_to_verify": "Veuillez entrer le code ci-dessous pour vérifier votre numéro",
   "enter_your_pin_code": "Entrez votre code PIN",
   "verify_now": "Vérifier maintenant",
